[package]
name = "thvote-submit"
version = "0.1.0"
authors = ["zyddnys <zyddnys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
actix-web = "3"
bson = "1.2.2"
rand = "0.8"
chrono = "0.4"
tokio = {version = "1.7.1", features = ["rt-multi-thread", "macros"]}
futures-util = "0.3.15"
colored = "2"
thiserror = "1.0.26"
redlock = {git = "https://github.com/zyddnys/redlock-rs.git"}

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["async-std-runtime"]
